fix flickering tabs

--- a/src/gitbook-slate.css
+++ b/src/gitbook-slate.css
@@ -1804,7 +1804,7 @@ button.active,
 .icon-button {
     background-color: transparent !important;
     color: var(--light-text-color) !important;
-    opacity: 1 !important;
+    /* opacity: 1 !important; */
     transition-duration: 0.2s;
     transition-property: color;
 }
